--- a/src/style.css
+++ b/src/style.css
@@ -1,14 +1,19 @@
 @import 'transition-style';
+@import url('https://fonts.googleapis.com/css2?family=Roboto-Slab&display=swap');
 
 :root {
-    /* Header & footer  */
-    --theme-color: rgb(218, 165, 32, 0.7);
+    font-size: 18px;
+    /* Theme Color */
+    --theme-color: rgb(247, 255, 247, 0.6);
+    --button-bg: rgb(136, 162, 170);
 }
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    color: #333533;
+    font-family: 'Roboto Slab', sans-serif;
 }
 
 #content {
@@ -17,6 +22,7 @@
     background-attachment: fixed;
     background-size: cover;
     height: 100vh;
+    width: 100vw;
     display: grid;
     grid-template-rows: auto 1fr auto;
     background-color: antiquewhite;
@@ -34,7 +40,7 @@ header {
 }
 
 header h2 {
-    width: 150px;
+    white-space: pre-line;
     text-align: center;
 }
 
@@ -45,8 +51,24 @@ nav {
 }
 
 nav button {
-    height: fit-content;
+    background-color: var(--button-bg);
+    border-top-right-radius: 4px;
+    border-top-left-radius: 4px;
+    border: none;
+    border-bottom: solid 2px black;
+    font-size: 0.9rem;
+    padding: 10px 20px;
+    transition: all 0.45s ease-in;
 }
+
+nav button:hover,
+nav button:focus,
+main.home button:hover {
+    font-weight: 800;
+    box-shadow: inset 0 0 0 2em #d9f2b4;
+}
+
+/* Main general  */
 
 main {
     display: flex;
@@ -55,6 +77,10 @@ main {
     align-items: center;
     width: 100vw;
     padding: 80px 70px;
+}
+
+span {
+    font-size: 1.2rem;
 }
 
 main > div {
@@ -67,7 +93,8 @@ main > div {
     padding: 35px;
     height: 100%;
     width: 60%;
-    background-color: var(--theme-color);
+    background-image: linear-gradient(var(--theme-color), var(--theme-color));
+    backdrop-filter: blur(4px);
     border-radius: 1px;
 }
 
@@ -75,6 +102,14 @@ main.home h1 {
     padding: 10px;
     text-align: center;
     white-space: pre-line;
+}
+
+main.home button {
+    font-size: 1.2rem;
+    padding: 15px 20px;
+    border: none;
+    background: var(--button-bg);
+    transition: all 0.45s ease-in;
 }
 
 /* Menu tab */
@@ -114,6 +149,10 @@ main.contact > div {
     width: 45%;
 }
 
+main.contact > div > span {
+    text-align: center;
+}
+
 iframe {
     width: 400px;
     height: 300px;
@@ -131,10 +170,70 @@ iframe {
 
 footer {
     background-color: var(--theme-color);
-    text-align: center;
     padding: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.1rem;
 }
 
 footer svg {
     width: 1.3rem;
+    margin-left: 7px;
+}
+
+footer svg:hover {
+    fill: var(--button-bg);
+}
+
+/* Media query */
+
+@media only screen and (max-width: 1144px) {
+    :root {
+        font-size: 20px;
+    }
+
+    main.home > div,
+    main.contact > div,
+    main.menu > div {
+        width: 100%;
+    }
+}
+
+@media only screen and (max-width: 880px) {
+    header {
+        flex-direction: column;
+    }
+    main.menu > div > div {
+        flex-direction: column;
+    }
+
+    div.description {
+        height: initial;
+        text-align: center;
+    }
+}
+
+@media only screen and (max-width: 550px) {
+    :root {
+        font-size: 16px;
+    }
+
+    nav {
+        gap: 15px;
+    }
+
+    main {
+        padding: 55px 35px;
+    }
+
+    main.menu img {
+        width: 150px;
+        height: 150px;
+    }
+
+    iframe {
+        width: 100%;
+        height: 100%;
+    }
 }
