--- a/src/style.css
+++ b/src/style.css
@@ -16,16 +16,18 @@
     font-family: 'Roboto Slab', sans-serif;
 }
 
-#content {
+body {
     background-image: url('bg-img.jpg');
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-attachment: fixed;
     background-size: cover;
+}
+
+#content {
     height: 100vh;
     width: 100vw;
     display: grid;
     grid-template-rows: auto 1fr auto;
-    background-color: antiquewhite;
     overflow: auto;
 }
 
